<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
	<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_label" />

    <EditText
        android:id="@+id/txtDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="date" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/itemname_label" />

    <EditText
        android:id="@+id/txtItemName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity_label" />

    <EditText
        android:id="@+id/txtQuantity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount_label" />

    <EditText
        android:id="@+id/txtAmount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal" />

    <Button
        android:id="@+id/btnAddToExpenses"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickAddToExpenses"
        android:text="@string/addToExpenses_label" />
    
    <Button
        android:id="@+id/btnViewExpenses"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickViewExpenses"
        android:text="@string/viewExpenses_label" />   
        
     <Button
        android:id="@+id/btnDeleteExpenses"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickDeleteExpenses"
        android:text="@string/deleteExpenses_label" />     
    
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary_label" />

	<EditText
	    android:id="@+id/txtSummary"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:inputType="textMultiLine" />

</LinearLayout>
</ScrollView>